--- a/styles/home.css
+++ b/styles/home.css
@@ -16,6 +16,7 @@ header{
     grid-area: left;
     
     background: url('/assets/home-bg-img.svg') no-repeat top/contain;
+    background-position-x: -10rem ;
 }
 
 main{
@@ -23,10 +24,11 @@ main{
 
     display:flex ;
     align-items: center;
+    margin-top: -12rem;
 }
 
 main .container{
-    width: min(36.3rem 100%);   
+    width: min(36.3rem, 100%);   
 }
 
 main h2{
@@ -39,11 +41,57 @@ main h2{
 
 
 input{
-    border: .2rem solid var(--green-blue);
+    border: .2rem solid var(--grey-blue);
     padding: 0 1.6rem;
 }
 
 input, button, .button{
     width: 100%;
     margin-bottom: 1.8rem;
+}
+
+/* Separator Line */
+.separator{
+    display:flex;
+    align-items: center;
+    
+    margin: 4rem;
+}
+
+.separator div:nth-child(2){
+    color: var(--grey-blue);
+    font-family: 'Poppins',sans-serif;
+    font-weight: 400;
+    padding:0 1.35rem;
+    line-height: 0;
+    
+}
+
+.separator div:nth-child(1),
+.separator div:nth-child(3){
+    background: var(--grey-blue);
+    width: 100%;
+    height: 1px;
+}
+
+/* Creat Balls */
+.ball{
+    width: 21.2rem;
+    height: 21.2rem;
+    background: var(--blue);
+    clip-path: circle();
+
+    position: fixed;
+    opacity: 0.1;
+}
+
+.ball.top{
+   top: -46rem;
+    width: 63.3rem;
+     right: -35rem;
+    height: 63.3rem;
+}
+.ball.bottom{
+    bottom: -15rem;
+    right: 5.6rem;
 }
