--- a/styles/room.css
+++ b/styles/room.css
@@ -1,3 +1,7 @@
+.content{
+    max-width: min(112rem, 90%);
+}
+
 #room header{
     width: 100%;
     
@@ -45,6 +49,8 @@
     border: .2rem solid var(--grey-blue);
     padding: 1.6rem;
     border-radius:0 .8rem .8rem .8rem;
+
+    margin-bottom: 1.6rem;
 }
 
 #question-form textarea{
@@ -65,9 +71,21 @@
     justify-content: space-between;
 }
 
-#question-form form footer div{
+#question-form form footer > div{
+    display: flex;
+    align-items: center;
     color: var(--icons-details);
     font-family: 'Poopins', sans-serif;
     font-weight: 400;
     font-size: 1.4rem;
+}
+
+#question-form form footer > div img{
+    margin-right: 0.9rem;
+}
+
+#question-form form footer button{
+    height: auto;
+    padding: .8rem 2.4rem ;
+    line-height: 2.4rem;
 }
