--- a/styles/global.css
+++ b/styles/global.css
@@ -18,6 +18,7 @@ html{
     --grey-dark: #4D5E77;
     --grey-blue:#A1B2CD;
     --grey-light:#E5EAF1;
+    --grey-medium: #eaecf2;
 
     /*1rem = 16px (User Agente) = 100% (User Agente) */
     font-size: 62.5%
@@ -66,7 +67,7 @@ button, .button{
     
     display: flex;
     align-items: center;
-    justify-content:  center;
+    justify-content: center;
 
     background: var(--blue);
     color: var(--white);
@@ -93,6 +94,19 @@ button.outlined,
     border: .2rem solid var(--blue)
 }
 
+button.red,
+.button.red{
+    background: var(--red);
+    color: var(--white);
+}
+
+button.grey,
+.button.grey{
+    background: var(--grey-light);
+    color: var(--grey-dark);
+}
+
+/*** HEADER ***/
 
 .content header{
     width: 80%;
@@ -100,7 +114,6 @@ button.outlined,
 }
 
 .content header img{
-    width: auto;
-    
+    width: 16.7rem;   
 }
 
