--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -27,7 +27,7 @@
                 </a>
                 <div class="buttons">
                
-                    <div class= "button outlined">
+                    <div class= "button outlined" id="room-id" data-id="323243">
                         #323243 
                         <img src="images/copy.svg"alt="Copiar número da sala"/>  
                     </div>
@@ -66,11 +66,11 @@
                                </div>
                            </div>
                             <div class="actions">
-                                <a href="#" class="check">
+                                <a href="#" class="check" data-id="2">
                                     <img src="images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
-                                <a href="#" class="delete">
+                                <a href="#" class="delete" data-id="2">
                                     <img src="images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
@@ -87,7 +87,7 @@
                                 </div>
                             </div>
                              <div class="actions">
-                                 <a href="#" class="delete">
+                                 <a href="#" class="delete" data-id="3">
                                      <img src="images/trash.svg" alt="Excluir">
                                      Excluir
                                  </a>
@@ -105,7 +105,7 @@
                 <h2>Excluir</h2>
                 <p>Tem certeza que você deseja excluir esta pergunta?</p>
 
-                <form action="#">
+                <form action="/room/:room/:question/:action" method="POST">
                     <label class="sr-only" for-id="password">Digite sua senha admin</label>
                     <input type="password" id="password" name="password" placeholder="Digite sua senha"/>
                 
