--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -14,36 +14,34 @@ header{
 
 #bg{
     grid-area: left;
-    
+
     background: url('/images/home-bg-img.svg') no-repeat top/contain;
-    background-position-x: -10rem ;
+    background-position-x: -10rem;
 }
 
 main{
-    grid-area:right;
+    grid-area: right;
 
-    display:flex ;
+    display: flex;
     align-items: center;
     margin-top: -12rem;
 }
 
-main .container{
-    width: min(36.3rem, 100%);   
+main .container{    
+    width: min(36.3rem, 100%);
 }
 
 main h2{
     font-family: 'Poppins', sans-serif;
-    color:var(--black);
+    color: var(--black);
     font-size: clamp(20px, 5vw, 2.8rem);
     margin-bottom: 2.4rem;
 }
 
-
-
 input{
     border: .2rem solid var(--grey-blue);
     padding: 0 1.6rem;
-    outline:none;
+    outline: none;
 }
 
 input, button, .button{
@@ -53,19 +51,18 @@ input, button, .button{
 
 /* Separator Line */
 .separator{
-    display:flex;
+    display: flex;
     align-items: center;
-    
-    margin: 4rem;
+
+    margin: 4rem 0;
 }
 
 .separator div:nth-child(2){
     color: var(--grey-blue);
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    padding:0 1.35rem;
+    padding: 0 1.35rem;
     line-height: 0;
-    
 }
 
 .separator div:nth-child(1),
@@ -75,24 +72,25 @@ input, button, .button{
     height: 1px;
 }
 
-/* Creat Balls */
+/*** create balls ***/
 .ball{
     width: 21.2rem;
     height: 21.2rem;
     background: var(--blue);
     clip-path: circle();
+    opacity: 0.1;
 
     position: fixed;
-    opacity: 0.1;
 }
 
 .ball.top{
-   top: -46rem;
+    top: -46rem;
     width: 63.3rem;
-     right: -35rem;
+    right: -35rem;
     height: 63.3rem;
 }
+
 .ball.bottom{
     bottom: -15rem;
-    right: 5.6rem;
+    right: 5.6rem
 }
