--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -2,6 +2,7 @@
     visibility: visible;
     opacity: 1;
 }
+
 .modal-wrapper{
     position: fixed;
     width: 100vw;
@@ -11,16 +12,17 @@
     display: flex;
 
     background: rgba(4, 9, 17, .8);
-    
+
     visibility: hidden;
     opacity: 0;
 }
+
 .modal-wrapper .modal{
     width: min(59rem, 90%);
     background: var(--white);
     margin: auto;
 
-    border-radius:  .8rem;
+    border-radius: .8rem;
 
     font-family: 'Poppins', sans-serif;
     text-align: center;
@@ -37,7 +39,7 @@
 
 .modal-wrapper .modal p{
     margin-bottom: 2.4rem;
-    color: var(--grey-dark)
+    color: var(--grey-dark);
 }
 
 .modal-wrapper .modal input{
@@ -45,7 +47,7 @@
     padding: 1.3rem 1.6rem;
     border: .2rem solid var(--blue);
     outline: none;
-    width: min(70%, 30.2rem);
+    width: min(70%, 30.2rem)
 }
 
 .modal-wrapper .modal .buttons{
@@ -56,7 +58,6 @@
 
 .modal-wrapper .modal .buttons > .button{
     margin-right: .8rem;
-
 }
 
 .modal-wrapper .modal .buttons > button,
