--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -4,7 +4,7 @@
 
 #room header{
     width: 100%;
-    
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -21,7 +21,7 @@
 
 #room header .buttons .button:nth-child(1) img{
     margin-left: 1rem;
-    width:  2rem;
+    width: 2rem;
     height: 2rem;
 }
 
@@ -29,39 +29,40 @@
     padding: 1.3rem 3.2rem;
 }
 
-#room header .buttons .button:nth-child(2)img{
-    width:  2rem;
+#room header .buttons .button:nth-child(2) img{
+    width: 2rem;
     height: 2rem;
 }
 
-/* QUESTION FORM */
+/*** QUESTION FORM ***/
 #question-form h2{
     font-family: 'Poppins', sans-serif;
     font-size: 2.8rem;
     color: var(--black);
     font-weight: 700;
     line-height: 4.2rem;
-    
+
     margin-bottom: 2.4rem;
 }
 
 #question-form form{
     border: .2rem solid var(--grey-blue);
     padding: 1.6rem;
-    border-radius:0 .8rem .8rem .8rem;
+    border-radius: 0 .8rem .8rem .8rem;
 
     margin-bottom: 1.6rem;
 }
 
-#question-form textarea{
+#question-form form textarea{
     resize: none;
     background: transparent;
 
     width: 100%;
 
     outline: none;
-} 
-#question-form form textarea::place-holder{
+}
+
+#question-form form textarea::placeholder{
     color: var(--grey-blue);
 }
 
@@ -74,8 +75,9 @@
 #question-form form footer > div{
     display: flex;
     align-items: center;
+
     color: var(--icons-details);
-    font-family: 'Poopins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 1.4rem;
 }
@@ -86,17 +88,17 @@
 
 #question-form form footer button{
     height: auto;
-    padding: .8rem 2.4rem ;
-    line-height: 2.4rem;
+    padding: .8rem 2.4rem;
+    line-height: 2.4rem
 }
-/* Quesitons */
 
+
+/******* Questions *****/
 .question-wrapper{
     background: var(--light-blue);
     margin-bottom: .8rem;
-    margin: radius 0 .8rem .8rem .8rem;
+    border-radius: 0 .8rem .8rem .8rem ;
     padding: 2.4rem;
-
 }
 
 .question-wrapper .question-content{
@@ -133,16 +135,38 @@
     margin-right: .8rem;
 }
 
-/* a + a (only brother) or nth-child() */
-.question-wrapper .actions > a:nth-child(2){
+.question-wrapper .actions > a + a{
     margin-left: 2.4rem;
 }
 
-/*Question Read  */
+/***** Question Read ****/
 .question-wrapper.read{
     background: var(--grey-medium);
 }
 
 .question-wrapper.read .question-content .user{
-    background: var(--grey-blue) ;
-} 
+    background: var(--grey-blue);
+}
+
+
+/*** No Questions   **/
+.no-questions{
+    text-align: center;
+    margin-top: 5.2rem;
+}
+.no-questions img{
+    max-width: 100%;
+    margin-bottom: 1.2rem;
+}
+.no-questions p{
+    font-family: 'Poppins', sans-serif; 
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+.no-questions p + p{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;   
+    margin-top: 1.3rem;
+    line-height: 1.9rem;
+}
